Create DatabaseID enumeration
git-svn-id: file:///home/svn/DVA2006@6710 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a